--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -1,7 +1,4 @@
-﻿# CMakeList.txt : CMake project for TextToDigits, include source and define
-# project specific logic here.
-#
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.8)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -15,7 +12,4 @@ file(GLOB SOURCES
     TextToDigitsConverter.cpp
 )
 
-# Add source to this project's executable.
 add_executable (App "main.cpp" ${HEADERS} ${SOURCES})
-
-# TODO: Add tests and install targets if needed.
