Add phone number style. Extract controller state to reduce function parameter number.

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -8,6 +8,7 @@ file(GLOB HEADERS
     TextToDigitsConverter.hpp
     Parser.hpp
     Token.hpp
+    TextToDigitsConverterContext.hpp
 )
 
 file(GLOB SOURCES
