--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -1,7 +1,4 @@
-﻿# CMakeList.txt : CMake project for TextToDigits, include source and define
-# project specific logic here.
-#
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.8)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
